added AL methdods. LC, ME, MM work.

--- a/configs/cifar10/resnet18.yaml
+++ b/configs/cifar10/resnet18.yaml
@@ -1,6 +1,7 @@
-EXP_NAME: 'DUBUGGING'
+EXP_NAME: 'DEBUGGING'
 RND_SEED: 1
-GPU_ID: '2'
+GPU_ID: '1'
+NUM_GPUS: 1
 DATASET:
   NAME: CIFAR10 
   ROOT_DIR: 'data'
@@ -15,7 +16,7 @@ OPTIM:
   BASE_LR: 0.1
   LR_POLICY: steps
   STEPS: [0] #[0, 30, 60, 90]
-  MAX_EPOCH: 5
+  MAX_EPOCH: 1
   MOMENTUM: 0.9
   NESTEROV: False
   WEIGHT_DECAY: 0.0005
@@ -24,12 +25,11 @@ TRAIN:
   SPLIT: train
   BATCH_SIZE: 256
   IM_SIZE: 32
-  EVAL_PERIOD: 5
+  EVAL_PERIOD: 1
 TEST:
   SPLIT: test
   BATCH_SIZE: 200
   IM_SIZE: 32
-NUM_GPUS: 1
 DATA_LOADER:
   NUM_WORKERS: 4
 CUDNN:
