--- a/configs/cifar10/al/RESNET18_VAAL.yaml
+++ b/configs/cifar10/al/RESNET18_VAAL.yaml
@@ -1,7 +1,6 @@
-EXP_NAME: 'DEBUGGING'
-RND_SEED: 1
-GPU_ID: '1'
-NUM_GPUS: 1
+EXP_NAME: 'SOME_RANDOM_NAME'
+RNG_SEED: 1
+GPU_ID: '3'
 DATASET:
   NAME: CIFAR10 
   ROOT_DIR: 'data'
@@ -10,7 +9,6 @@ DATASET:
 MODEL:
   TYPE: resnet18
   NUM_CLASSES: 10
-  DEPTH: 18
 OPTIM:
   TYPE: 'sgd'
   BASE_LR: 0.1
@@ -36,7 +34,7 @@ CUDNN:
   BENCHMARK: True
 ACTIVE_LEARNING:
   BUDGET_SIZE: 5000
-  SAMPLING_FN: 'random'
+  SAMPLING_FN: 'vaal'
   INIT_L_RATIO: 0.1
-  MAX_ITER: 5
-  DROPOUT_ITERATIONS: 10
+  MAX_ITER: 1
+# Refer to config.py for VAAL options
