minor changes related to logs

--- a/configs/cifar10/al/RESNET18_RANDOM.yaml
+++ b/configs/cifar10/al/RESNET18_RANDOM.yaml
@@ -1,6 +1,6 @@
-EXP_NAME: 'SOME_RANDOM_NAME'
+EXP_NAME: 'RANDOM_TRIAL_5'
 RNG_SEED: 1
-GPU_ID: '3'
+GPU_ID: '0'
 DATASET:
   NAME: CIFAR10 
   ROOT_DIR: 'data'
@@ -10,20 +10,20 @@ MODEL:
   TYPE: resnet18
   NUM_CLASSES: 10
 OPTIM:
-  TYPE: 'sgd'
-  BASE_LR: 0.1
+  TYPE: 'adam'
+  BASE_LR: 0.0005
   LR_POLICY: steps
   STEPS: [0] #[0, 30, 60, 90]
   MAX_EPOCH: 100
-  MOMENTUM: 0.9
+  MOMENTUM: 0.0
   NESTEROV: False
   WEIGHT_DECAY: 0.0005
-  GAMMA: 0.1
+  GAMMA: 0.0
 TRAIN:
   SPLIT: train
   BATCH_SIZE: 256
   IM_SIZE: 32
-  EVAL_PERIOD: 100
+  EVAL_PERIOD: 2
 TEST:
   SPLIT: test
   BATCH_SIZE: 200
@@ -36,4 +36,4 @@ ACTIVE_LEARNING:
   BUDGET_SIZE: 5000
   SAMPLING_FN: 'random'
   INIT_L_RATIO: 0.1
-  MAX_ITER: 10
+  MAX_ITER: 5
