a lot of changes

--- a/configs/cifar10/train/RESNET18.yaml
+++ b/configs/cifar10/train/RESNET18.yaml
@@ -1,29 +1,29 @@
-EXP_NAME: 'SOME_RANDOM_NAME'
+# EXP_NAME: 'YOUR_EXPERIMENT_NAME'
 RNG_SEED: 1
-GPU_ID: '3'
 DATASET:
   NAME: CIFAR10 
-  ROOT_DIR: 'data'
+  ROOT_DIR: './data'
   VAL_RATIO: 0.1
-  AUG_METHOD: 'horizontalflip'
+  AUG_METHOD: 'hflip'
 MODEL:
   TYPE: resnet18
   NUM_CLASSES: 10
 OPTIM:
   TYPE: 'sgd'
-  BASE_LR: 0.1
-  LR_POLICY: steps
-  STEPS: [0] #[0, 30, 60, 90]
-  MAX_EPOCH: 100
+  BASE_LR: 0.025
+  LR_POLICY: cos
+  LR_MULT: 0.1
+  # STEPS: [0, 60, 120, 160, 200] 
+  MAX_EPOCH: 200
   MOMENTUM: 0.9
-  NESTEROV: False
-  WEIGHT_DECAY: 0.0005
+  NESTEROV: True
+  WEIGHT_DECAY: 0.0003
   GAMMA: 0.1
 TRAIN:
   SPLIT: train
-  BATCH_SIZE: 256
+  BATCH_SIZE: 1
   IM_SIZE: 32
-  EVAL_PERIOD: 10
+  EVAL_PERIOD: 2
 TEST:
   SPLIT: test
   BATCH_SIZE: 200
